--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               onload="this.rel='stylesheet'">
         <script>
             console.log('%cŠtěpán Jákl | Full-stack developer & interface designer', `border: 1px solid #4e7bff; border-radius: 2px; color: #4e7bff; font-size: 12.5px; padding: 22.5px 35px 20px 35px; margin: 20px 20px; /* padding: 29.75px 30px 29.75px 84px; background-image: url("data:image/svg+xml,%3Csvg width='100%' height='100%' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0 40V10.033L10.033 0H40V30L30 40H0ZM10 30V25H22.5L25 22.5H10V17.5H30V25L25 30H10ZM15 10H30V15H10L15 10Z' fill='%234e7bff'/%3E%3C/svg%3E%0A"); background-repeat: no-repeat; background-position: 20px 50%; background-size: 40px 40px */`)
-            console.log('%cThis website was created with HTML, CSS and sprinkled with a tiny bit of JS.', 'color: #4e7bff; margin: 15px 0 15px 20px;')
+            console.log('%cThis website was created with HTML, CSS and sprinkled with a bit of vanilla JavaScript.', 'color: #4e7bff; margin: 15px 0 15px 20px;')
             console.log('%cThe ambition has been to create a performant, pixel-perfect and responsive site.', 'color: #4e7bff; margin: 15px 0 15px 20px;')
             console.log('%cNo framework, no compiler, no site generator - just pure joy.', 'color: #4e7bff; margin: 15px 0 15px 20px;')
             /* console.log('%cMade with tears, stress and anxiety. Just joking, of course it was crafted with love ;-)', 'color: #4e7bff; margin: 15px 0 15px 20px;') */
@@ -79,7 +79,7 @@
             }
         </script>
         <script>
-            document.addEventListener('keydown', function(event) {
+            document.addEventListener('keydown', (event) => {
                 if (event.keyCode === 27) { // Escape key
                     document.location.hash = ''
                 } else if (event.keyCode === 80) { // P key
@@ -107,11 +107,56 @@
             })
         </script>
         <script>
-            document.addEventListener('DOMContentLoaded', function() {
+            document.addEventListener('DOMContentLoaded', () => {
                 if (window.location.hash) {
                     document.querySelectorAll('.animate-fade-in-name span, .animate-fade-in-title span, .animate-fade-in-cta-1, .animate-fade-in-cta-2, .animate-fade-in-logo').forEach(element => {
                         element.classList.add('noanimation');
                     })
+                }
+            })
+        </script>
+        <script>
+            window.addEventListener('wheel', () => {
+                let deltaY, deltaX, verticalScrollDirection, horizontalScrollDirection
+                if (window.location.hash === '#profile') {
+                    const modalProfileElement = document.querySelector('.modal__profile')
+                    scrollPositionTop = modalProfileElement.scrollTop
+                    deltaY = Math.abs(event.deltaY)
+                    deltaX = Math.abs(event.deltaX)
+                    if (deltaY > deltaX) {
+                        verticalScrollDirection = event.deltaY > 0 ? 'down' : 'up'
+                        if (verticalScrollDirection === 'up' && scrollPositionTop === 0) {
+                            window.location.hash = '#'
+                        }
+                    }
+                } else {
+                    scrollPositionX = window.scrollX || window.pageXOffset
+                    scrollPositionY = window.scrollY || window.pageYOffset
+                    totalHeight = document.documentElement.scrollHeight
+                    totalWidth = document.documentElement.scrollWidth
+                    deltaY = Math.abs(event.deltaY)
+                    deltaX = Math.abs(event.deltaX)
+                    if (deltaY > deltaX) {
+                        verticalScrollDirection = event.deltaY > 0 ? 'down' : 'up'
+                        if (verticalScrollDirection === 'down' && scrollPositionX + window.innerHeight >= totalHeight) {
+                            if (window.location.hash === '') {
+                                window.location.hash = '#profile'
+                            }
+                        } else if (verticalScrollDirection === 'up' && scrollPositionX === 0) {}
+                    } else if (deltaX > deltaY) {
+                        if (document.querySelector('.animate-fade-in-cta-2').getAnimations().length === 0 || document.querySelector('.animate-fade-in-cta-2').getAnimations()[0].playState === 'finished') {
+                            horizontalScrollDirection = event.deltaX > 0 ? 'right' : 'left'
+                            if (horizontalScrollDirection === 'right' && scrollPositionY + window.innerWidth >= totalWidth) {
+                                if (window.location.hash === '') {
+                                    window.location.hash = '#menu'
+                                }
+                            } else if (horizontalScrollDirection === 'left' && scrollPositionY === 0) {
+                                if (window.location.hash === '#menu') {
+                                    window.location.hash = '#'
+                                }
+                            }
+                        }
+                    }
                 }
             })
         </script>
@@ -490,6 +535,10 @@
                                             <p>
                                                 Experienced and detail-oriented user interface engineer who specializes in crafting intuitive digital solutions. Committed to delivering high-quality results for projects with exciting propositions and realistic goals. Proficient in both back-end and front-end development, with a focus on prioritizing user experience.
                                             </p>
+                                            <p>
+                                                custom-tailored designs and user experience, intuitive interface features that surprise and spark joy
+                                                TODO: copy to console log and readme
+                                            </p>
                                             <p style="padding: var(--segment-third) 0;">
                                                 In recent years, my efforts have been devoted to building and overseeing a significant number of websites using the <a href="https://apostrophecms.com/" target="_blank"><u>ApostropheCMS</u></a> framework.
                                             </p>
@@ -578,7 +627,7 @@
                                         <dd style="margin-bottom: -10px;">
                                             <ul class="tags">
                                                 <li>
-                                                    <span>Dashboard app</span>
+                                                    <span>Dashboard SPA??? app</span>
                                                 </li>
                                                 <li>
                                                     <span>Landing page</span>
@@ -605,10 +654,14 @@
                                         <dd style="margin-bottom: -10px;">
                                             <ul class="tags">
                                                 <li>
+                                                    <svg role="img" width="14" height="14" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Apostrophe</title><path d="M15.674 0c-.795.001-1.794.095-3.167.313l-4.6.729c-3.138.497-4.224 1.003-5.274 1.798a6.485 6.485 0 00-2.24 3.082c-.43 1.245-.577 2.434-.08 5.571l.729 4.6c.497 3.138 1.003 4.22 1.798 5.273a6.485 6.485 0 003.082 2.24c1.245.431 2.434.578 5.571.081l4.6-.729c3.138-.497 4.22-1.003 5.273-1.799a6.477 6.477 0 002.24-3.081c.431-1.245.578-2.434.082-5.571l-.73-4.6c-.497-3.138-1.003-4.224-1.799-5.274a6.477 6.477 0 00-3.081-2.24C17.378.152 16.695 0 15.674 0zm-5.319 4.566a.52.52 0 01.003 0 .52.52 0 01.52.444l.77 4.865a.52.52 0 01-.435.6l-4.859.77a.52.52 0 01-.602-.436l-.77-4.866a.52.52 0 01.435-.6l4.86-.77a.52.52 0 01.078-.007zM9.92 5.692l-3.823.605.612 3.83 3.813-.605zm6.504 2.91a3.274 3.274 0 01.497 6.513 3.258 3.258 0 01-3.713-2.726 3.274 3.274 0 013.216-3.787zm-.054 1.058a2.226 2.226 0 10.388 4.42 2.208 2.208 0 001.818-2.541 2.226 2.226 0 00-2.206-1.879zm-6.45 3a.52.52 0 01.424.208l3.824 4.964a.52.52 0 01-.333.839l-5.932.937a.52.52 0 01-.576-.695l2.108-5.901a.52.52 0 01.486-.352zm.18 1.611L8.61 18.438l4.186-.664z"/></svg>
                                                     <span>ApostropheCMS</span>
                                                 </li>
                                                 <li>
-                                                    <span>AlpineJS/VueJS/ReactJS</span>
+                                                    <svg role="img" width="14" height="14" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Alpine.js</title><path d="m24 12-5.72 5.746-5.724-5.741 5.724-5.75L24 12zM5.72 6.254 0 12l5.72 5.746h11.44L5.72 6.254z"/></svg>
+                                                    <span>AlpineJS</span>
+                                                    <svg role="img" width="14" height="14" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Vue.js</title><path d="M24,1.61H14.06L12,5.16,9.94,1.61H0L12,22.39ZM12,14.08,5.16,2.23H9.59L12,6.41l2.41-4.18h4.43Z"/></svg>
+                                                    <span>VueJS/ReactJS</span>
                                                 </li>
                                                 <li>
                                                     <span>Figma/Sketch</span>
@@ -620,7 +673,13 @@
                                                     <span>JavaScript</span>
                                                 </li>
                                                 <li>
-                                                    <span>JAMstack/Astro</span>
+                                                    <svg role="img" width="16" height="16" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Jamstack</title><path d="M12 0C5.365 0 0 5.364 0 12s5.365 12 12 12 12-5.364 12-12V0zm.496 3.318h8.17v8.17h-8.17zm-9.168 9.178h8.16v8.149c-4.382-.257-7.904-3.767-8.16-8.149zm9.168.016h8.152a8.684 8.684 0 01-8.152 8.148z"/></svg>
+                                                    <span>JAMstack</span>
+                                                    <svg role="img" width="16" height="16" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Astro</title><path d="M8.358 20.162c-1.186-1.07-1.532-3.316-1.038-4.944.856 1.026 2.043 1.352 3.272 1.535 1.897.283 3.76.177 5.522-.678.202-.098.388-.229.608-.36.166.473.209.95.151 1.437-.14 1.185-.738 2.1-1.688 2.794-.38.277-.782.525-1.175.787-1.205.804-1.531 1.747-1.078 3.119l.044.148a3.158 3.158 0 0 1-1.407-1.188 3.31 3.31 0 0 1-.544-1.815c-.004-.32-.004-.642-.048-.958-.106-.769-.472-1.113-1.161-1.133-.707-.02-1.267.411-1.415 1.09-.012.053-.028.104-.045.165h.002zm-5.961-4.445s3.24-1.575 6.49-1.575l2.451-7.565c.092-.366.36-.614.662-.614.302 0 .57.248.662.614l2.45 7.565c3.85 0 6.491 1.575 6.491 1.575L16.088.727C15.93.285 15.663 0 15.303 0H8.697c-.36 0-.615.285-.784.727l-5.516 14.99z"/></svg>
+                                                    <span>Astro</span>
+                                                </li>
+                                                <li>
+                                                    <span>MongoDB</span>
                                                 </li>
                                                 <li>
                                                     <span>Motion One/Framer Motion</span>
