--- a/index.html
+++ b/index.html
@@ -217,17 +217,14 @@
                                    rel="noreferrer"
                                    aria-label="Open to new opportunities, book a virtual meeting"
                                    class="relative z-0 flex overflow-hidden"
-                                   style="padding: 15px 17px;
+                                   style="padding: 11px 15px;
                                           background-color: var(--highlight-primary);
                                           border-radius: 8px">
                                     <div class="tooltip__wrapper inline-flex align-items-center justify-content-center"
                                          style="column-gap: 14px">
-                                        <span id="availability__dot"
-                                              class="relative"
-                                              style="width: 8px;
-                                                     height: 8px;
-                                                     border-radius: 9999px"></span>
-                                        <span id="availability__text" class="whitespace-nowrap">Open to new opportunities</span>
+                                        <span id="availability__button__dot"
+                                              class="relative flex align-items-center justify-content-center"></span>
+                                        <span id="availability__button__text" class="whitespace-nowrap">Open to new opportunities</span>
                                     </div>
                                 </a>
                                 <div class="tooltip tooltip-bottom">
