update timeline ui

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                                                 Experienced and detail-oriented user interface engineer who specializes in crafting intuitive digital solutions. Committed to delivering high-quality results for projects with exciting propositions and realistic goals. Proficient in both back-end and front-end development, with a focus on prioritizing user experience.
                                             </p>
                                             <p>
-                                                custom-tailored designs and user experience, intuitive interface features that surprise and spark joy
+                                                custom-tailored designs and user experience, intuitive interface features that surprise and spark joy (TODO: look at inspire list)
                                                 TODO: copy to console log and readme
                                             </p>
                                             <p style="padding: var(--segment-third) 0;">
@@ -765,7 +765,7 @@
                                             <div data-timeline-section="2023" class="flex flex-col" style="outline: 1px solid red">
                                                 <div class="sticky flex flex-col align-items-end"
                                                 style="row-gap: 20px;
-                                                            top: 20px;
+                                                            top: var(--modal-button-close-inset);
                                                             padding-bottom: 20px">
                                                     <hr style="display: inline-flex;
                                                                width: 100%;
@@ -781,7 +781,7 @@
                                                                  font-weight: 400">2023</span>
                                                 </div>
                                             </div>
-                                            <div style="height: 400px; outline: 1px solid red;">
+                                            <div style="height: 600px; outline: 1px solid red;">
                                                 <div class="flex flex-col justify-content-between w-full"
                                                 style="height: 20px">
                                                     <hr style="display: inline-flex;
@@ -807,12 +807,12 @@
                                                     <span>AHOJ</span>
                                                 </div>
                                             </div>
-                                            <div class="flex flex-col" style="outline: 1px solid red">
+                                            <div data-timeline-section="2022" class="flex flex-col" style="outline: 1px solid red">
                                                 <div class="flex flex-col align-items-end"
                                                 style="
                                                             row-gap: 20px;
                                                             position: sticky;
-                                                            top: 20px;
+                                                            top: var(--modal-button-close-inset);
                                                             padding-bottom: 20px">
                                                     <hr style="display: inline-flex;
                                                                width: 100%;
@@ -859,7 +859,7 @@
                                 </div>
                                 <div class="sticky" style="bottom: calc(-1 * var(--segment))">
 
-                                    <div style="margin-left: calc(48px + 48px + 240px );
+                                    <div class="absolute" style="bottom: 0px; margin-left: calc(48px + 48px + 240px );
                                                 width: 800px;
                                                 /* outline: 1px solid red */">
 
